make awards style more like hordes

--- a/templates/ajax/soul/distinctions.html.twig
+++ b/templates/ajax/soul/distinctions.html.twig
@@ -10,8 +10,8 @@
     <div class="distinctions-list center">
         {% if user.awards|length != 0 %}
        <ul class="tabs plain" x-tab-group="awards" x-tab-control x-tab-default="dinstinctions">
-            <li class="tab" x-tab-id="dinstinctions"><div class="tab-link">{{ 'Statistiken'|trans({}, 'soul') }}</div></li>
-            <li class="tab" x-tab-id="titles"><div class="tab-link">{{ 'Errungenschaften'|trans({}, 'soul') }} ({{user.awards|length}})</div></li>
+            <li class="tab-soul-distinctions" x-tab-id="dinstinctions"><div class="tab-link">{{ 'Statistiken'|trans({}, 'soul') }}</div></li>
+            <li class="tab-soul-distinctions" x-tab-id="titles"><div class="tab-link">{{ 'Errungenschaften'|trans({}, 'soul') }} ({{user.awards|length}})</div></li>
         </ul>
         {% endif %}
         <div x-tab-group="awards" x-tab-id="dinstinctions" x-tab-target>
