--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -109,9 +109,9 @@ div.tooltip.badge-tooltip {
                 border-bottom: none; min-height: 14px; background: none;
             }
             .TitlesList {
-                text-decoration: none; color: #f0d79e; list-style: none; text-align: initial;
+                text-decoration: none; color: white; list-style: none; text-align: initial; font-variant: small-caps; font-size: 75%;
                 li {
-                    border-bottom: 1px dashed white;
+                    border-bottom: 1px dashed #633424;
                 }
             }
         }
@@ -479,3 +479,35 @@ ul.coa-users {
   font-size: 120%; padding-top: 5px; color: #ddab76; font-weight: bold;
 }
 
+.tab-soul-distinctions {
+    text-decoration: none;
+    display: inline-block;
+    zoom: 1;
+    padding: 2px 4px;
+    margin-left: 2px;
+    text-align: center;
+    font-size: 8pt;
+    line-height: 1.2em;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: underline;
+    color: #f58766;
+
+    &:hover {
+        color: #f0d79e;
+    }
+
+    &.selected {
+        border: 1px solid #633424;
+        border-bottom: 0px;
+        -moz-box-shadow: inset 0px 1px 2px rgba(0,0,0,0.5);
+        -webkit-box-shadow: inset 0px 1px 2px rgb(0,0,0,0.5);
+        box-shadow: inset 0px 1px 2px rgb(0,0,0,0.5);
+        color: #ddab76;
+    }
+
+    &.selected:hover {
+        color: #DDAB76;
+        background-color: #3d2016;
+    }
+}
