Adding formating for forum search tip

--- a/templates/ajax/forum/search.html.twig
+++ b/templates/ajax/forum/search.html.twig
@@ -64,7 +64,7 @@
                     <div class="cell padded rw-9">
                         <ul style="padding-left: 10px; margin: 0;">
                             <li>{{ 'Benutze Anführungszeichen (" "), um nach einer bestimmten Wortkette zu suchen. Beispiel: "Ration Wasser"'|trans({}, 'global') }}</li>
-                            <li>{{ 'Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen'|trans({}, 'global') }}</li>
+                            <li>{{ 'Setze ein Ausrufezeichen (!) vor einen Suchbegriff, um diesen auszuschließen. Beispiel: Wasser !Brunnen'|trans({}, 'global')|raw }}</li>
                             <li>{{ 'Um nach Anführungszeichen oder Ausrufezeichen zu suchen, schreibe einen Backslash (\\) davor, um zu verhindern, dass sie als Suchbefehl interpretiert werden. Beispiel: Boom\\!'|trans({}, 'global') }}</li>
                         </ul>
                     </div>
