--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="cell rw-5 rw-sm-12 center">
-            {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, points: points} %}
+            {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, points: points, user: app.user} %}
         </div>
         <div class="cell padded rw-7 rw-sm-12">
 
