--- a/templates/ajax/admin/users/pictos.html.twig
+++ b/templates/ajax/admin/users/pictos.html.twig
@@ -10,7 +10,7 @@
             <div class="row">
                 {% if is_granted("ROLE_ADMIN") %}
                 <div class="cell rw-5 rw-sm-12 center">
-                    {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos} %}
+                    {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, user: user} %}
                 </div>
                 <div class="cell rw-5 rw-lg-7 rw-sm-12">
                     {{ picto_creator(pictoPrototypes) }}
