--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -18,7 +18,7 @@
             <div class="row me">
                 {% include 'ajax/soul/badges.html.twig' with {badger: user} %}
                 <div class="cell rw-5 rw-sm-12 center">
-                    {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, points: points} %}
+                    {% include 'ajax/soul/distinctions.html.twig' with {pictos: pictos, points: points, user: user} %}
                 </div>
                 <div class="cell padded rw-7 rw-sm-12">
                     <div class="score"><img src="{{ asset('build/images/soul/small_score.gif') }}" alt="" /> {{ 'Seelenpunktzahl'|trans({}, 'global') }} : <strong>{{ '%points% Punkte'|trans({'%points%': user.allSoulPoints}, 'global') }}</strong></div>
