--- a/templates/ajax/soul/distinctions.html.twig
+++ b/templates/ajax/soul/distinctions.html.twig
@@ -41,14 +41,43 @@
         {% endif %}
         </div>
         <div x-tab-group="awards" x-tab-id="titles" x-tab-target>
-            <div class="TitlesList"> 
-                {% for award in user.awards %}
-                    {% if award.prototype is not null and award.prototype.title is not null %}
-                        <li>"{{ award.prototype.title|trans({},'game') }}"</li>
+            <div class="title-list">
+
+                {% for id,list in user.awards.values|group_titles %}
+
+                    {% if id == 'custom' %}
+                        <li class="chapter"><b>{{ 'Einzigartige Errungenschaften'|trans({},'game') }}</b></li>
+                    {% elseif id == 'single' %}
+                        <li class="chapter"><b>{{ 'Besondere Errungenschaften'|trans({},'game') }}</b></li>
+                    {% else %}
+                        <li class="chapter">
+                            <img alt="" src="{{  asset('build/images/pictos/' ~ list[0].prototype.associatedPicto.icon ~ '.gif') }}" /> {{ list[0].prototype.associatedPicto.label|trans({}, 'game') }}
+                            <div class="tooltip forum-tooltip">
+                                <h1>{{ list[0].prototype.associatedPicto.label|trans({}, 'game') }}</h1>
+                                <em>{{ list[0].prototype.associatedPicto.description|trans({}, 'game')}}</em>
+                            </div>
+                        </li>
                     {% endif %}
-                    {% if award.prototype is not null and award.prototype.icon is not null %}
-                        <li><img alt="" src="{{ asset('build/images/icons/title/' ~ award.prototype.icon ~ '.gif') }}" /></li>
-                    {% endif %}
+
+                    {% for award in list %}
+                        {% if award.prototype is not null and award.prototype.title is not null %}
+                            <li>
+                                "{{ award.prototype.title|trans({},'game') }}"
+                                <div class="tooltip forum-tooltip">
+                                    {% if award.prototype is not null %}
+                                        {% if award.prototype.associatedPicto %}
+                                            <em>{{ award.prototype.associatedPicto.label|trans({}, 'game')}} x {{ award.prototype.unlockQuantity }}</em>
+                                        {% else %}
+                                            <em>{{ 'Dies ist eine besondere Errungenschaft, die im Rahmen eines Events verliehen wurde.'|trans({},'game') }}</em>
+                                        {% endif %}
+                                    {% else %}
+                                        <em>{{ 'Dies ist eine einzigartige Errungenschaft, die im Rahmen eines Events verliehen wurde.'|trans({},'game') }}</em>
+                                    {% endif %}
+                                </div>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+
                 {% endfor %}
             </div>
         </div>
