--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -161,6 +161,7 @@
                         <option value="{{role.id}}">{{ role.label|trans({}, 'game') }}</option>
                     {% endfor %}
                     <option value="_ban_">[{{ 'Verbannung'|trans({}, 'game') }}]</option>
+                    <option value="_esc_">[{{ 'Eskorte'|trans({}, 'game') }}]</option>
                 </select>
             </div>
             <div class="padded cell grow-0 shrink-0"><button x-control="1" id="{{ _self.gen_id(prefix,'rolewidget','give')}}"><i class="fa fa-plus"></i><div class="tooltip">{{'Rolle vergeben'|trans({}, 'admin')}}</div></button></div>
