Allow activating night watch for citizens using the admin panel

--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -162,6 +162,7 @@
                     {% endfor %}
                     <option value="_ban_">[{{ 'Verbannung'|trans({}, 'game') }}]</option>
                     <option value="_esc_">[{{ 'Eskorte'|trans({}, 'game') }}]</option>
+                    <option value="_nw_">[{{ 'Nachtwächter'|trans({}, 'game') }}]</option>
                 </select>
             </div>
             <div class="padded cell grow-0 shrink-0"><button x-control="1" id="{{ _self.gen_id(prefix,'rolewidget','give')}}"><i class="fa fa-plus"></i><div class="tooltip">{{'Rolle vergeben'|trans({}, 'admin')}}</div></button></div>
