--- a/assets/less/modules/beyond.less
+++ b/assets/less/modules/beyond.less
@@ -135,7 +135,7 @@ span.ruin-bury-desc { font-variant: small-caps; font-size: 0.9em; color: #5c2b33
 
 div.ruin-bury-count {
   border: 1px solid #ddab76; background: #996739; padding: 2px; margin-bottom: 10px;
-  &>div {
+  &>div.sand {
     padding: 0; margin: 0; height: 16px; width: 9px; position: relative; display: inline-block; overflow: visible;
     &:before { content: " "; position: absolute; top: 0; left: 0; width: 16px; height: 16px; background: url("../../img/icons/buried.gif") no-repeat }
   }
