--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -126,7 +126,12 @@
                                     <span class="ruin-desc">{{ 'Die Zone ist vollständig mit verrottender Vegetation, Sand und allem möglichen Schrott bedeckt. Du bist dir sicher, dass es hier etwas zu finden gibt, aber zunächst musst du diesen gesamten Sektor aufräumen um ihn vernünftig durchsuchen zu können.'|trans({}, 'game') }}</span>
                                 </p>
                                 <span class="ruin-bury-desc">{{ 'Es muss noch aufgeräumt werden'|trans({},'game') }}:</span>
-                                <div class="ruin-bury-count">{% for p in 1..zone.buryCount %}<div></div>{% endfor %}</div>
+                                <div class="ruin-bury-count">
+                                    {% for p in 1..zone.buryCount %}<div class="sand"></div>{% endfor %}
+                                    <div class="tooltip help">{% trans from 'game' %}
+                                        Jede <strong>Aufräumaktion</strong> enfernt einen Haufen von der Leiste. Wenn alle Häufen verschwunden sind, kann die Zone nach Lust und Laune erforscht werden.
+                                    {% endtrans %}</div>
+                                </div>
                                 {% if scout %}<button id="scout_ruin_discover">{{ 'Aufklärer: Ruinen erkunden'|trans({},'game') }}<img alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" /><div class="tooltip help">{{ 'Mit dieser Aktion kannst du ermitteln, welches Gebäude hier vergraben ist.'|trans({},'game') }}</div></button>{% endif %}
                             {% else %}
                                 <img src="{{ asset('build/images/icons/small_help.gif') }}" /> <span class="ruin-name">{{ 'Ruine'|trans({},'game') }} : <b>{{ zone.prototype.label|trans({}, 'game') }}</b></span><br />
@@ -327,6 +332,9 @@
                                     {% endif %}
                                     <img class="icon left" alt="" src="{{ asset('build/images/icons/uncover.gif') }}" />
                                     {{ 'Zone freiräumen'|trans({},'game') }} (<div class="ap">1</div>)
+                                    <div class="tooltip">
+                                        {{'Es gilt jetzt die Ärmel hochzukrempeln, wenn du Zugang zu dieser Zone und ihre potenziellen Schätzen bekommen möchtest.'|trans({},'game')}}
+                                    </div>
                                 </button>
                             {% endif %}
                         {% endif %}
