--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -65,7 +65,7 @@
 
             <div class="score"><img src="{{ asset('build/images/soul/small_score.gif') }}" alt="" /> {{ 'Seelenpunktzahl'|trans({}, 'global') }} : <strong>{{ '%points% Punkte'|trans({'%points%': app.user.allSoulPoints}, 'global') }}</strong> <a class="help-button"><div class="tooltip help">{{ 'Diese Punkte werden für die Seelenrangliste verwendet.'|trans({},'global') }}<p style="color: #f0d79e;"><i>{{ 'Abhängig von der Anzahl der Tage, die du überlebt hast, erhältst du nach jeder Partie eine bestimmte Anzahl an Punkten.'|trans({},'global') }}</i></p></div>{{ 'Hilfe'|trans({},'global') }}</a></div>
 
-            {% if not app.user.activeCitizen is null%}
+            {% if app.user.activeCitizen is not null and app.user.activeCitizen.alive %}
                 <div class="current">
                     <em>{{'Aktuelles Leben'|trans({}, 'global')}} : </em><br /><strong><img src="{{ asset('build/images/soul/r_explor.gif') }}" alt="" /> {{ app.user.activeCitizen.town.name }}</strong> ({{ 'Tag %day%'|trans({ '%day%':app.user.activeCitizen.town.day }, 'game') }})
                 </div>
