--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -23,7 +23,7 @@
                 <div class="cell padded rw-7 rw-sm-12">
                     <div class="score"><img src="{{ asset('build/images/soul/small_score.gif') }}" alt="" /> {{ 'Seelenpunktzahl'|trans({}, 'global') }} : <strong>{{ '%points% Punkte'|trans({'%points%': user.allSoulPoints}, 'global') }}</strong></div>
                     {# @var user \App\Entity\User #}
-                    {% if not user.activeCitizen is null %}
+                    {% if user.activeCitizen is not null and user.activeCitizen.alive %}
                         <div class="current">
                             <em>{{'Aktuelles Leben'|trans({}, 'global')}} : </em><br /><strong><img src="{{ asset('build/images/soul/r_explor.gif') }}" alt="" /> {{ user.activeCitizen.town.name }}</strong> ({{ 'Tag %day%'|trans({'%day%':user.activeCitizen.town.day}, 'game') }})
                         </div>
