--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -375,6 +375,19 @@
                                 </li>
                             {% endfor %}
                             </ul>
+                                <div class="log">
+                                    <div class="log-content">
+                                        {% for log_complaint in all_complaints %}
+                                            <div class="log-entry log-entry log-entry-type-8 log-entry-class-{{ log_complaint.on ? 1 : 3 }}">
+                                                <span class="log-part-time" style="width: 120px">{{ log_complaint.time|format_datetime('medium', 'short') }}</span>
+                                                <span class="log-part-content">
+                                                    <span>{{ log_complaint.from.user.name }}</span> <i class="fa fa-arrow-right"></i> <span>{{ log_complaint.to.user.name }}</span>
+                                                    (<i>{{ log_complaint.reason.text|trans({}, 'game') }}</i>)
+                                                </span>
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
                         </div>
                         <div class="padded cell">
                             <h5>{{ 'Stimmen'|trans({}, 'admin') }}</h5>
