--- a/templates/ajax/public/validate.html.twig
+++ b/templates/ajax/public/validate.html.twig
@@ -41,7 +41,7 @@
             e.preventDefault();
             $.ajax.easySend( '{{ path('api_validate') }}', $.html.serializeForm(document.getElementById('validate-form')),
                 function (data,code) {
-                    $.ajax.load(null, '{{ path('initial_landing') }}', true);
+                    $.ajax.load(null, '{{ path('welcome_soul') }}', true);
                 }, {
                     'default': '{% trans from 'login' %}Validierung fehlgeschlagen. Bitte prüfe deine Eingaben.{% endtrans %}',
                     'invalid_fields': function(data) {
