--- a/templates/ajax/ghost/welcome.html.twig
+++ b/templates/ajax/ghost/welcome.html.twig
@@ -1,34 +1,34 @@
 {% extends "ajax/ajax_plain.html.twig" %}
 {% block ajax_base %}
     <div class="row">
-        <div class="cell ro-2 rw-8">
-            <div class="row">
-                <div class="cell padded rw-5">
+        <div class="cell ro-2 rw-8 ro-lg-1 rw-lg-10 ro-md-0 rw-md-12">
+            <div class="row-flex v-center wrap-sm">
+                <div class="cell padded rw-5 center rw-sm-12">
                     {% set img = 'nightCamping.png' %}
                     <img style="width: 230px; border: 1px solid #d4be8e;" alt="" src="{{ asset('build/images/soul/' ~ img) }}">
                 </div>
-                <div class="cell rw-7">
-                        <h5>
+                <div class="cell padded rw-7 rw-sm-12">
+                        <h5 style="margin-top: 0;">
                             {% trans from 'ghost' %}
-                                Willkommen in der Hölle !
+                                Willkommen in der Hölle!
                             {% endtrans %}
                         </h5>
 
                         <p>
                             {% trans from 'ghost' %}
-                                Sie sind dabei, sich 39 anderen Sträflingen in einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.
+                                Du bist dabei, dich mit 39 anderen armen Seelen einer Stadt anzuschließen, mit dem Ziel, so lange wie möglich zu überleben.
                             {% endtrans %}
                         </p>
                         <button x-ajax-href="{{ path('ghost_welcome') }}">
-                            <img src='{{ asset('build/images/icons/death.gif') }}'/>
+                            <img alt="" src='{{ asset('build/images/icons/death.gif') }}'/>
                             {% trans from 'ghost' %}
-                                Betreten Sie das Spiel
+                                Spiel betreten
                             {% endtrans %}
                         </button>
                         <button x-ajax-href="{{ path('soul_me') }}">
-                            <img src='{{ asset('build/images/icons/small_ghost_blue.gif') }}'/>
+                            <img alt="" src='{{ asset('build/images/icons/small_ghost_blue.gif') }}'/>
                             {% trans from 'ghost' %}
-                                Meine Seele sehen
+                                Meine Seele ansehen
                             {% endtrans %}
                         </button>
                 </div>
