--- a/templates/ajax/soul/death.html.twig
+++ b/templates/ajax/soul/death.html.twig
@@ -99,7 +99,7 @@
                 
                 $.ajax.easySend( '{{ path('api_unsubscribe') }}', {lastwords: lastWords},
                     function () {
-                        $.ajax.load(null, '{{ path('initial_landing') }}', true);
+                        $.ajax.load(null, '{{ path('postgame') }}', true);
                     } );
             }
         });
