Add new help section for scripts

--- a/templates/ajax/help/use_of_external_sites.html.twig
+++ b/templates/ajax/help/use_of_external_sites.html.twig
@@ -34,4 +34,6 @@
 </li>
 </ul>
 <div class="clear"></div>
+<a class="button" x-ajax-href="{{ url('help', {'name': 'use_of_external_scripts'}) }}"><img src="{{ asset('build/images/icons/small_move.gif') }}" alt="move"> {{'Weiter'|trans({}, 'help')}}:<strong> {{ 'Externe Scripte'|trans({},'help') }}</strong></a>
+
 {% endblock %}
