--- a/templates/ajax/help/shell.html.twig
+++ b/templates/ajax/help/shell.html.twig
@@ -281,10 +281,25 @@
                         </ul>
                     </li>
 
-                    <li class="main {% if section == 'use_of_external_sites' %}active{% endif %}">
-                        <img src="{{ asset('build/images/icons/small_archive.gif') }}" alt="extern">
-                        <span class="link" x-ajax-href="{{ url('help', {'name': 'use_of_external_sites'}) }}">{{ 'Externe Webseiten und Anwendungen'|trans({},'help') }}</span>
+                    <li class="main {% if section == 'support' %}active{% endif %}">
+                        <img src="{{ asset('build/images/icons/small_middot.gif') }}" alt="st">
+                        <span>{{ 'Für Community-Entwickler'|trans({},'help') }}</span>
                     </li>
+
+                    <li class="sublist">
+                        <ul>
+                            <li class="{% if section == 'use_of_external_sites' %}active{% endif %}">
+                                <img src="{{ asset('build/images/icons/small_archive.gif') }}" alt="extern">
+                                <span class="link" x-ajax-href="{{ url('help', {'name': 'use_of_external_sites'}) }}">{{ 'Externe Webseiten und Anwendungen'|trans({},'help') }}</span>
+                            </li>
+                            <li class="{% if section == 'use_of_external_scripts' %}active{% endif %}">
+                                <img src="{{ asset('build/images/icons/small_more.gif') }}" alt="scripts">
+                                <span class="link" x-ajax-href="{{ url('help', {'name': 'use_of_external_scripts'}) }}">{{ 'Externe Scripte'|trans({},'help') }}</span>
+                            </li>
+                        </ul>
+                    </li>
+
+
                 </ul>
 			</div>
         </div>
